--- a/_posts/0000-01-01-intro.md
+++ b/_posts/0000-01-01-intro.md
@@ -1,4 +1,4 @@
-<h1 style="font-size: 3em">Talk Title</h1>
+<h1 style="font-size: 3em">Programming For Yourself</h1>
 <br/>
 <br/>
 <br/>
@@ -11,7 +11,7 @@ Paul Ganssle
 <br/>
 <br/>
 <span style="font-size: 1em;"><em>This talk on Github:
-<a href="URL">pganssle-talks/{URL}</a></em>
+<a href="URL">pganssle-talks/2025-pycon-us-programming-for-yourself</a></em>
 </span>
 <br/>
 <a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/">
