Remove unecessary tree

--- a/_posts/0000-05-09-size.md
+++ b/_posts/0000-05-09-size.md
@@ -134,55 +134,8 @@ OUTPUT:
 <h1 class="fragment nospace-fragment disappearing-fragment fade-out" data-fragment-index="1">Not every project is big!</h1>
 <h1 class="fragment nospace-fragment fade-in" data-fragment-index="1">Sometimes your small projects <b>become<b> big</h1>
 
-<div class="fragment nospace-fragment disappearing-fragment fade-out" data-fragment-index="2">
+<div>
 <img src="images/screenshots/anki-textual-lite-word-merger.svg"
      class="screenshot splash">
 <div class="caption">Using Textual to create a proper UI to resolve word conflicts</div>
  </div>
-
-<pre class="fragment fade-in" data-fragment-index="2">
-$ tree .
-<font color="#729FCF"><b>.</b></font>
-├── config.toml
-├── <font color="#729FCF"><b>deck</b></font>
-│   ├── <font color="#729FCF"><b>spanish_vocab_templates</b></font>
-│   │   ├── style.css
-│   │   ├── word_back.html
-│   │   └── word_front.html
-│   ├── vocab_by_frequency_5000.apkg
-│   ├── vocab_by_frequency.apkg
-│   └── vocab_by_frequency_extra_words.txt
-├── <font color="#729FCF"><b>examples</b></font>
-│   └── example_config.toml
-├── LICENSE
-├── pyproject.toml
-├── README.md
-├── <font color="#729FCF"><b>scripts</b></font>
-│   ├── compact_ranks.py
-│   ├── fix_example_sentences.py
-│   └── run_anki_connect.py
-├── <font color="#729FCF"><b>src</b></font>
-│   └── <font color="#729FCF"><b>anki_lang_cards</b></font>
-│       ├── anki_import.py
-│       ├── annotation_extractor.py
-│       ├── annotations_to_csv.py
-│       ├── caches.py
-│       ├── combine_annotations.py
-│       ├── config.py
-│       ├── conflict_resolver.py
-│       ├── dictionary_entries.py
-│       ├── __init__.py
-│       ├── __main__.py
-│       ├── org_to_csv.py
-│       ├── part_of_speech.py
-│       ├── prompts.py
-│       ├── query.py
-│       ├── _types.py
-│       └── word_merger.py
-├── <font color="#729FCF"><b>tests</b></font>
-│   ├── test_caches.py
-│   └── test_range_finding.py
-└── TODO.plan
-
-8 directories, 33 files
-</pre>
