Use new CSS title slide

--- a/_posts/0000-01-01-intro.md
+++ b/_posts/0000-01-01-intro.md
@@ -1,25 +1,31 @@
-<h1 style="font-size: 3em">Programming For Yourself</h1>
-<br/>
-<br/>
-<br/>
-<span style="font-size: 2.5em">
-Paul Ganssle
-</span>
-<br/>
-<br/>
-<img src="images/pganssle-logos.svg" height="40px" alt="@pganssle">
-<br/>
-<br/>
-<span style="font-size: 1em;"><em>This talk on Github:
-<a href="URL">pganssle-talks/2025-pycon-us-programming-for-yourself</a></em>
-</span>
-<br/>
-<a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/">
-    <img src="external-images/logos/cc-zero.svg" height="45px">
-</a>
-<br/>
+<div class="centered-container" style="height: 100dvh">
+<p class="main-title">Programming For Yourself</p>
+<div class="main-title-info">
+<div class="author">
+    Paul Ganssle
+</div>
+
+<div class="logo">
+    <img src="images/pganssle-logos.svg" height="40px" alt="@pganssle">
+</div>
+
+<div class="link">
+    <span style="font-size: 1em;"><em>This talk on Github:
+        <a href="https://github.com/pganssle-talks/2025-pycon-us-programming-for-yourself">pganssle-talks/2025-pycon-us-programming-for-yourself</a></em>
+    </span>
+</div>
+
+<div class="license">
+    <a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/">
+        <img src="external-images/logos/cc-zero.svg" height="45px">
+    </a>
+</div>
+</div>
+</div>
 
 Notes:
 
-This is where speaker notes go.
+Hi everyone, I'm Paul Ganssle and for my day job, I'm a software developer, but as will soon become clear, it turns out that when my work day is over, I actually continue to be a software developer, believe it or not, and that's actually the subject of today's talk: 
+
+TODO: Insert Wizard metaphor? Superhero metaphor? General gist is "you have superpowers and you don't just need to use them to deploy seamless database migrations at scale or whatever"
 
