Fix centering issues under new CSS style

--- a/_posts/0000-01-10-overview.md
+++ b/_posts/0000-01-10-overview.md
@@ -1,22 +1,28 @@
+<div class="centered-container">
 <figure>
 <img src="images/generated/sorcerer_harvey_upscaled.png"
      class="splash"
      />
 <figcaption class="smallcaption">From the IP-unencumbered film <i>Harvey Palmer and the Thinker's Rock</i></figcaption>
 </figure>
+</div>
 
 --
 
 # Home-cooked meals
 
+<div class="centered-container">
 <img src="images/generated/home_cooked_meal_illustration.png"
      class="splash"
      />
+</div>
 
 --
 
 # Tailored suits
 
+<div class="centered-container">
 <img src="images/generated/scifi-suit.png"
      class="splash"
      />
+</div>
