--- a/_posts/0000-06-10-llms.md
+++ b/_posts/0000-06-10-llms.md
@@ -110,7 +110,9 @@ END:VCARD
 
 # ML Models can be new components in your programs
 
-<div class="fragment disappearing-fragment nospace-fragment fade-out" data-fragment-index="0">
+<div class="centered-container fragment disappearing-fragment nospace-fragment fade-out" data-fragment-index="0">
+<div>
+
 <br/>
 
 `getclip | python -m anki_lang_cards.org_to_csv`
@@ -150,8 +152,9 @@ END:VCARD
 </div>
 </div>
 </div>
+</div>
 
-<div class="fragment fade-in" data-fragment-index="0">
+<div class="centered-container fragment nospace-fragment fade-in" data-fragment-index="0">
 
 <img src="images/screenshots/sumana-blog-whisper.png"
      class="splash screenshot"/>
@@ -159,7 +162,6 @@ END:VCARD
 https://www.harihareswara.net/posts/2022/speech-to-text-with-whisper-how-i-use-it-why/
 
 </div>
-
 
 --
 
