--- a/_posts/0000-05-09-size.md
+++ b/_posts/0000-05-09-size.md
@@ -1,11 +1,13 @@
 # Not every project is big!
 
+<div class="centered-container">
 <figure>
 <img src="images/figures/gym-calibration.png"
     class="figure splash"/>
 
 <figcaption>The cable machines in the Google Cambridge gym have ~2.2x leverage over the nominal weights</figure>
 </figure>
+</div>
 
 --
 
@@ -13,6 +15,7 @@
 
 ## Example: Podcast normalization
 
+<div class="centered-container">
 <div class="gallery two-wide">
 <div class="gallery-item">
     <img src="images/figures/seattle-library-podcast-2014-10-28.png" class="figure"/>
@@ -34,6 +37,7 @@
 |seattle-library-podcast-2014-10-28   |<b>  -34.13  </b>|  -28.08  |<font color="#10BA13">  -33.97  </font>|  -28.08  |<font color="#10BA13">  -34.06  </font>|
 |spy-museum-podcast-2014-11-07        |<b>  -21.97  </b>|<font color="#F61010">  -42.74  </font>|  -17.81  |<font color="#F61010">  -42.74  </font>|<font color="#10BA13">  -22.00  </font>|
 </pre>
+</div>
 </div>
 </div>
 
