Adjustments to code slide alignment, size and styling

--- a/_posts/0000-06-10-llms.md
+++ b/_posts/0000-06-10-llms.md
@@ -23,9 +23,18 @@
 
 # LLMs make the easy stuff basically free
 
-<div class="gallery two-wide">
-<div class="gallery-item">
+<style>
+div.wide-code pre.code-wrapper {
+    overflow-x: clip;
+    max-width: 45dvw;
+}
 
+</style>
+
+<div class="centered-container">
+<div class="side-by-side">
+
+<div class="left wide-code" style="margin-right: 3em;">
 <b>Prompt</b>
 
 ````markdown
@@ -63,7 +72,7 @@ To accomplish this, I recommend:
 ````
 
 </div>
-<div class="gallery-item">
+<div class="right">
 
 <b>Result</b>
 
@@ -105,6 +114,7 @@ END:VCARD
 ```
 
 </div>
+</div>
 
 --
 
@@ -121,7 +131,7 @@ END:VCARD
 
 
 <div class="gallery two-wide">
-<div class="gallery-item">
+<div class="gallery-item big-code">
 
 <h3>Input</h3>
 
@@ -135,7 +145,7 @@ END:VCARD
 ```
 
 </div>
-<div class="gallery-item">
+<div class="gallery-item medium-code">
 
 <h3>Output</h3>
 
