Add speaker notes for the first two slides

--- a/_posts/0000-01-01-intro.md
+++ b/_posts/0000-01-01-intro.md
@@ -25,7 +25,6 @@
 
 Notes:
 
-Hi everyone, I'm Paul Ganssle and for my day job, I'm a software developer, but as will soon become clear, it turns out that when my work day is over, I actually continue to be a software developer, believe it or not, and that's actually the subject of today's talk: 
+Hi everyone, I'm Paul Ganssle and for my day job, I'm a software developer, but as will soon become clear, it turns out that when my work day is over, I actually continue to be a software developer, believe it or not, and that's actually the subject of today's talk: the benefits of using your technical skills for your own pursuits!
 
-TODO: Insert Wizard metaphor? Superhero metaphor? General gist is "you have superpowers and you don't just need to use them to deploy seamless database migrations at scale or whatever"
-
+Because here's the thing: we live in a technologically advanced world, and sufficiently advanced technology is essentially indistinguishable from magic, which means...
