--- a/_posts/0000-01-10-overview.md
+++ b/_posts/0000-01-10-overview.md
@@ -7,6 +7,14 @@
 </figure>
 </div>
 
+Notes:
+
+That you are a wizard. I mean, sorcerer.
+
+Think about it for a second, you invoke arcane commands, you summon daemons to do your bidding. You can perform unprecedented acts of divination. But the people in the world of Harry Potter, er.. I mean, Harvey Palmer... do not only do wizardry at their day job then do a bunch of stuff manually at home — they use magic in every aspect of their lives.
+
+Similarly, I think it's a bit sad that more people build impressive skill portfolios at work, but don't see the dozens of opportunities around them to use their programming skills to make their day-to-day life a bit better or just a bit more magical.
+
 --
 
 # Home-cooked meals
@@ -15,14 +23,30 @@
 <img src="images/generated/home_cooked_meal_illustration.png"
      class="splash"
      />
+
+<i><a href="https://www.robinsloan.com/notes/home-cooked-app/">Robin Sloan - An app can be a home-cooked meal</a></i>
+<i>https://www.robinsloan.com/notes/home-cooked-app/</i>
 </div>
 
+Notes:
+
+Some time ago I came across an article that proposed a metaphor that really resonated with me, which is apps as home-cooked meals. In this article, Robin Sloan talks about a messaging app that he built and maintains just for his family's use. The suggestion here is that despite the fact that none of us thinks anything of going out and preparing a meal for your family, and in fact many of us get great joy from it, despite the fact that we could just go to a restaurant and have something prepared by a professional chef or a whole kitchen crew! Or we could buy pre-packaged food with economies of scale!
+
+And still, building and maintaining a messaging app just for your family's use sounds a bit absurd to do, despite the fact that it probably takes less time than cooking your family a meal once a week, which sounds perfectly pleasant.
+
+<!--
+Commenting this out, because I realize it's gilding the lilly a bit. Might move to a wrap-up slide.
 --
 
-# Tailored suits
+# Tailored clothing
 
 <div class="centered-container">
 <img src="images/generated/scifi-suit.png"
      class="splash"
      />
 </div>
+
+Notes:
+
+Continuing to pile on metaphors here, I would also contend that an app you build can also be like tailored clothing. In the modern era, you could live your entire life without tailored clothing, but sometimes it's very nice to get something that was made to fit exactly you. As a programmer, you are or will be capable of making things that no one else needs, but that make your own life just that much better, and I encourage you to think of the ways that you can tailor your digital life to your needs.
+-->
