Fix slide titles

--- a/_posts/0000-05-09-size.md
+++ b/_posts/0000-05-09-size.md
@@ -135,8 +135,8 @@ OUTPUT:
 
 --
 
-<h1 class="fragment nospace-fragment disappearing-fragment fade-out" data-fragment-index="1">Not every project is big!</h1>
-<h1 class="fragment nospace-fragment fade-in" data-fragment-index="1">Sometimes your small projects <b>become<b> big</h1>
+<h1> <span class="fragment nospace-fragment disappearing-fragment fade-out" data-fragment-index="1">Not every project is big!</span>
+<span class="fragment nospace-fragment fade-in" data-fragment-index="1">Sometimes your small projects <b>become<b> big</span></h1>
 
 <div>
 <img src="images/screenshots/anki-textual-lite-word-merger.svg"
