Adjustments to bullet point slides

--- a/_posts/0000-08-10-wrap-up.md
+++ b/_posts/0000-08-10-wrap-up.md
@@ -15,12 +15,12 @@ div.wrap-up {
 <div class="centered-container">
 
 <ul class="wrap-up">
-<li class="fragment fade-in">It doesn't have to pay</li>
-<li class="fragment fade-in">It doesn't have to scale</li>
-<li class="fragment fade-in">It doesn't have to work for everyone</li>
+<li class="fragment fade-in" data-fragment-index="0">It doesn't have to pay</li>
+<li class="fragment fade-in" data-fragment-index="1">It doesn't have to scale</li>
+<li class="fragment fade-in" data-fragment-index="2">It doesn't have to work for everyone</li>
 </ul>
 
-<div class="fragment fade-in wrap-up">It doesn't <em>have</em> to do any of these things, but it can!</div>
+<div class="fragment fade-in wrap-up" data-fragment-index="3">It doesn't <em>have</em> to do any of these things, but it can!</div>
 </div>
 
 --
