Fix issue with images moving down
If you have extra spaces between the elements it generates <p> tags
around them, which don't get `display:none`. That causes problems when
we have flexbox with `space-evenly`.

--- a/_posts/0000-05-09-size.md
+++ b/_posts/0000-05-09-size.md
@@ -49,17 +49,14 @@
 <img src="images/screenshots/anki-nightingale-00.png"
     class="fragment mobile-screenshot screenshot disappearing-fragment nospace-fragment fade-out"
     data-fragment-index="0"/>
-
 <img src="images/screenshots/anki-nightingale-01-sentence.png"
     class="fragment mobile-screenshot screenshot disappearing-fragment nospace-fragment fade-in-and-out"
     data-fragment-index="0"/>
-
 <img src="images/screenshots/anki-nightingale-02-sentence-english.png"
     class="fragment mobile-screenshot disappearing-fragment nospace-fragment screenshot fade-in-and-out"
     data-fragment-index="1"/>
-
 <img src="images/screenshots/anki-nightingale-03-settings.png"
-    class="fragment mobile-screenshot screenshot fade-in"
+    class="fragment mobile-screenshot screenshot nospace-fragment fade-in"
     data-fragment-index="2"/>
 
 --
