Fix anki card centering

--- a/_posts/0000-05-09-size.md
+++ b/_posts/0000-05-09-size.md
@@ -46,6 +46,7 @@
 
 # Not every project is big!
 
+<div class="centered-container">
 <img src="images/screenshots/anki-nightingale-00.png"
     class="fragment mobile-screenshot screenshot disappearing-fragment nospace-fragment fade-out"
     data-fragment-index="0"/>
@@ -58,6 +59,7 @@
 <img src="images/screenshots/anki-nightingale-03-settings.png"
     class="fragment mobile-screenshot screenshot nospace-fragment fade-in"
     data-fragment-index="2"/>
+</div>
 
 --
 
