Adjust how the card sentence prompt looks

--- a/_posts/0000-05-09-size.md
+++ b/_posts/0000-05-09-size.md
@@ -65,11 +65,11 @@
 
 # Not every project is big!
 
-<div
-    class="fragment disappearing-fragment nospace-fragment fade-out"
-    data-fragment-index="0">
+<div>
 
-```python
+<pre class="code-wrapper">
+<code data-trim data-noescape class="language-python">
+<span class="fragment semi-fade-out" data-fragment-index="0">
 SENTENCE_PROMPT: Final[str] = """\
 You are an expert Spanish teacher and lexicographer, whose specialty is designing excellent example sentences that show
 off the range of uses of a given word.
@@ -81,7 +81,8 @@ the meaning specified by the English meaning. When the word is a verb, select di
 different sentences. The translations do not need to be word-for-word translations, it is more important that they
 capture the general spirit of the original Spanish.
 
-In some of your example sentences, it would be a bonus if they contain useful or interesting facts.
+</span><span class="fragment custom bolds" data-fragment-index="0">In some of your example sentences, it would be a bonus if they contain useful or interesting facts.</span>
+<span class="fragment semi-fade-out" data-fragment-index="0">
 
 Example:
 ========
@@ -107,13 +108,21 @@ OUTPUT:
 
 ...
 """
-```
+</span>
+</code>
+</pre>
 
 <div><em>You know what's really good at languages? A Large Language Model</em></div>
 
 </div>
 
-<div class="gallery three-wide fragment nospace-fragment fade-in" data-fragment-index="0">
+--
+
+<!-- .slide: data-transition="none" -->
+
+# Not every project is big!
+
+<div class="gallery three-wide">
     <div class="gallery-item">
         <img src="images/screenshots/anki-nightingale-04-distinct-sounds.png"
              class="screenshot mobile-screenshot"
