--- a/_posts/0000-06-10-llms.md
+++ b/_posts/0000-06-10-llms.md
@@ -88,7 +88,7 @@ done
 
 
 <div class="gallery two-wide">
-<div class="gallery-item big-code">
+<div class="gallery-item medium-code left-container">
 
 <h3>Input</h3>
 
@@ -102,7 +102,7 @@ done
 ```
 
 </div>
-<div class="gallery-item medium-code">
+<div class="gallery-item medium-code left-container">
 
 <h3>Output</h3>
 
